; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_sym.c_enterscope.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_sym.c_enterscope.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@level = common dso_local global i64 0, align 8
@LOCAL = common dso_local global i64 0, align 8
@tempid = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @enterscope() #0 {
  %1 = load i64, i64* @level, align 8
  %2 = add nsw i64 %1, 1
  store i64 %2, i64* @level, align 8
  %3 = load i64, i64* @LOCAL, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %5, label %6

5:                                                ; preds = %0
  store i64 0, i64* @tempid, align 8
  br label %6

6:                                                ; preds = %5, %0
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
